# BookOS-VoiceRecorder

./: .gitignore  PKGBUILD
src/: index.html  main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.conf.json.bak
src-tauri/capabilities/: default.json
src-tauri/linux/: desktop.hbs
src-tauri/src/: main.rs
