[package]
name = "bookos-voicerecorder"
version = "0.6.1"
description = "BookOS Voice Recorder"
authors = ["BookOS"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
base64 = "0.22"

[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = "2.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "z"
panic = "abort"
